一个测试用的spark driver